--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 	      <url>http://localhost:8081/repository/maven-releases/</url>
 	    </repository>
 	    <snapshotRepository>
-	      <id>nexus</id>
+	      <id>nexus2</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
 	      <url>http://localhost:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
